add travel sponsorship info

--- a/app/become-a-partner.html
+++ b/app/become-a-partner.html
@@ -36,7 +36,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
-<body style="padding: 0">
+<body>
 <div class="page-wrap">
 
   <!--[if IE]>
@@ -44,7 +44,104 @@
     href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
   <![endif]-->
+  <nav>
+    <input class="menu-btn" type="checkbox"/>
 
+    <div class="menu-icon">
+      <span>hamburger menu line</span>
+      <span>hamburger menu line</span>
+      <span>hamburger menu line</span>
+    </div>
+
+    <div class="menu-wrapper">
+
+      <div class="menu-content">
+
+        <div class="menu-item-primary">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="speakers.html">Speakers</a></li>
+            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a>
+            </li>
+            <li><a href="venue.html">Venue</a></li>
+            <li><a href="partners.html">Partners</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="code-of-conduct.html">Code of Conduct</a></li>
+          </ul>
+        </div>
+
+        <!--<div class="menu-item-lang">-->
+        <!--<ul>-->
+        <!--<li><a class="active" href="https://2018.conf.rollingscopes.com/">En</a></li>-->
+        <!--<li><a href="#">Ru</a></li>-->
+        <!--</ul>-->
+        <!--</div>-->
+
+        <div class="menu-item-about">
+          <h2><a href="about.html">About</a></h2>
+          <p>The Rolling Scopes is a front-end conference, located in Minsk, Belarus.</p>
+          <p><a href="about.html">Read more</a></p>
+        </div>
+
+        <div class="menu-item-previous">
+          <h2>Previous years</h2>
+          <ul class="preview-slider">
+            <li><a href="https://2015.conf.rollingscopes.com/">2015 </a>
+            </li>
+            <li><a href="https://2016.conf.rollingscopes.com/">2016 </a>
+            </li>
+            <li><a href="https://2017.conf.rollingscopes.com/">2017 </a>
+            </li>
+            <li><a href="https://2018.conf.rollingscopes.com/">2018 </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="menu-item-venue">
+          <h2><a href="venue.html">Venue</a></h2>
+          <img src="images/ok16-logo.png" alt="ok16 logo">
+          <h3>ОК16 CULTURAL HUB</h3>
+          <p>vulica Kastryčnickaja 16, Minsk</p>
+          <p><a href="venue.html">Learn more</a></p>
+        </div>
+
+        <div class="menu-item-tickets">
+          <h2><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></h2>
+          <p class="bold">The Rolling Scopes Conference
+            August 9-11, 2019
+            <br><span class="city-address">Minsk, Belarus</span></p>
+
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
+          <!--<p class="placeholder-btn"> Not on sale yet</p>-->
+
+          <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
+            <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
+            to learn about the tickets first!</p>
+        </div>
+
+        <div class="menu-item-social">
+          <h2>Follow us</h2>
+          <p>Follow us on social media, our hashtag #rollingscopes</p>
+          <ul class="social-links">
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a>
+            </li>
+            <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
+              class="fab fa-facebook-f"></i></a></li>
+            <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
+            ></i></a>
+            </li>
+            <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/explore/tags/rollingscopes/"><i
+              class="fab fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://t.me/therollingscopes/"><i class="fab fa-telegram-plane"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
 
   <section>
     <div class="content-lg text-left">
@@ -55,7 +152,7 @@
           </small>
         </p>
       </div>
-      <img src="images/the_rolling_scopes_conference.png" alt="">
+      <img class="no-print" src="images/the_rolling_scopes_conference.png" alt="">
       <p>Minsk, 9-11 August 2019</p>
       <p>1000+ participants</p>
       <p>3 days</p>
@@ -229,6 +326,19 @@
 
   <section>
     <div class="content-md">
+      <h2>Travel Sponsorship</h2>
+      <p>
+        We appreciate if the company covers the travel and accommodation expenses of the speaker, who represents it.
+      </p>
+      <p>
+        In these cases, we can add the company logo on our website in the "Travel Sponsors" section, and provide the
+        company with a place in the venue, for distributing stickers, booklets, small booth, etc.
+      </p>
+    </div>
+  </section>
+
+  <section>
+    <div class="content-sm">
       <h2 class="more">Examples of alternative partnership packages</h2>
       <ul class="text-left">
         <li>Partnership package #1: Coffee break Food & drinks</li>
@@ -245,13 +355,9 @@
   <section>
     <div class="content-md">
       <h2>To discuss any partnership options, please contact us:</h2>
-      <ul class="text-left">
-        <li>
-          <a href="mailto:rolling.scopes@gmail.com">rolling.scopes@gmail.com</a>
-        </li>
-        <!--<li>Telegram: s0nejka</li>-->
-        <!--<li>Skype: kseniya.varabei</li>-->
-      </ul>
+      <p>
+        <a href="mailto:rolling.scopes@gmail.com">rolling.scopes@gmail.com</a>
+      </p>
     </div>
   </section>
 
@@ -267,6 +373,8 @@
     </div>
   </section>
 </div>
+<footer><p>The Rolling Scopes 2019</p></footer>
+
 
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
