--- a/app/index.html
+++ b/app/index.html
@@ -296,7 +296,9 @@
             <figcaption>
               <span class="speaker-company">Lifestream</span>
               <h3><a href="speakers/alexander-saft.html">Alexander Saft</a></h3>
-              <p><small> Moscow, Russia</small></p>
+              <p>
+                <small> Moscow, Russia</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -445,7 +447,8 @@
       <h2>Travel Sponsors</h2>
       <ul class="partner-list">
         <li>
-          <a target="_blank" href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
+          <a target="_blank"
+             href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
             <img src="images/partners/logo-bluetooth.png" alt="bluetooth logo"/>
           </a>
         </li>
@@ -465,10 +468,9 @@
         </li>
       </ul>
 
-
-      <p><a class="btn"
-            href="mailto:rolling.scopes@gmail.com">Become
-        a Partner</a></p>
+      <p>
+        <a class="btn" href="become-a-partner.html">Become a Partner</a>
+      </p>
     </div>
 
   </section>
