--- a/app/partners.html
+++ b/app/partners.html
@@ -5,7 +5,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55428637-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-55428637-2');
@@ -23,7 +27,8 @@
   <meta name="msapplication-TileColor" content="#603cba">
   <meta name="theme-color" content="#ffffff">  <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
@@ -65,7 +70,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="speakers.html">Speakers</a></li>
-            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
+            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a>
+            </li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="contacts.html">Contacts</a></li>
@@ -114,7 +120,8 @@
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
           <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
@@ -126,11 +133,12 @@
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a>
+            </li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
               class="fab fa-facebook-f"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                            ></i></a>
+            ></i></a>
             </li>
             <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
@@ -163,7 +171,8 @@
       <h2>Travel Sponsors</h2>
       <ul class="partner-list">
         <li>
-          <a target="_blank" href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
+          <a target="_blank"
+             href="https://www.bluetooth.com/develop-with-bluetooth/build?utm_source=partner&utm_campaign=developer&utm_medium=ad&utm_content=rollingscopesshow-logo-link">
             <img src="images/partners/logo-bluetooth.png" alt="bluetooth logo"/>
           </a>
         </li>
@@ -183,13 +192,12 @@
         </li>
       </ul>
 
-
-      <p><a class="btn"
-            href="mailto:rolling.scopes@gmail.com">Become
-        a Partner</a></p>
+      <p>
+        <a class="btn" href="become-a-partner.html">Become a Partner</a>
+      </p>
 
     </div>
-      <div class="content-md padding-top-md">
+    <div class="content-md padding-top-md">
       <p class="text-lg">We would be happy to discuss any kind
         of partnership and gladly accept any help.</p>
 
@@ -205,8 +213,9 @@
                                                     href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
       </p>
       <p class="text-lg padding-top-lg">Follow us on <a target="_blank"
-                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
-        target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
+                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
+        and <a
+          target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
 
       <p class="content-xsm">Our hashtag on social media is <a
@@ -217,7 +226,7 @@
         <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
           class="fab fa-facebook-f"></i></a></li>
         <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                        ></i></a>
+        ></i></a>
         </li>
         <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
         <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
