upd: partners/sponsors' naming

--- a/app/become-a-partner.html
+++ b/app/become-a-partner.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RS Conf 2019 | Partnership</title>
+  <title>RS Conf 2019 | Sponsorship/Partnership</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -165,7 +165,7 @@
     </div>
 
     <div class="content-lg padding-top-md">
-      <h2 class="text-lg">RS Conf 2019: Partnership Packages</h2>
+      <h2 class="text-lg">RS Conf 2019: Sponsorship Packages</h2>
       <table class="sponsorship-packages padding-top-md">
         <thead>
         <tr>
@@ -244,7 +244,7 @@
 
         <tr>
           <td>
-            <h5>Company logo on the conference website in the "Partners" section</h5>
+            <h5>Company logo on the conference website in the "Sponsors" section</h5>
           </td>
           <td>
             <i class="fas fa-check-circle"></i>
@@ -326,7 +326,7 @@
 
   <section>
     <div class="content-md">
-      <h2>Travel Sponsorship</h2>
+      <h2>Travel Partnership</h2>
       <p>
         We appreciate if the company covers the travel and accommodation expenses of the speaker, who represents it.
       </p>
