--- a/app/partners.html
+++ b/app/partners.html
@@ -168,7 +168,7 @@
         </li>
       </ul>
 
-      <h2>Travel Sponsors</h2>
+      <h2>Travel Partners</h2>
       <ul class="partner-list">
         <li>
           <a target="_blank"
