--- a/app/venue.html
+++ b/app/venue.html
@@ -5,7 +5,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55428637-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-55428637-2');
@@ -23,7 +27,8 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <!-- endbower -->
@@ -114,7 +119,8 @@
             August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a
+            Ticket</a></p>
           <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
 
@@ -127,11 +133,12 @@
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a>
+            </li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
               class="fab fa-facebook-f"></i></a></li>
             <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                            ></i></a>
+            ></i></a>
             </li>
             <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
             <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
@@ -152,7 +159,6 @@
       <p class="text-md bold"><a target="_blank" href="https://goo.gl/maps/dn6gJtGXtb52">ОК16 CULTURAL HUB</a>
       </p>
       <p>vulica Kastryčnickaja 16, Minsk</p>
-
     </div>
     <div class="content-sm">
 
@@ -178,7 +184,8 @@
 
   <section>
     <div class="content-sm">
-      <p class="text-center"><a class="btn margin-bottom-md" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy a
+      <p class="text-center"><a class="btn margin-bottom-md"
+                                href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy a
         Ticket</a></p>
       <p class="text-center">Follow us on <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
         and <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
@@ -194,8 +201,9 @@
                                                     href="https://t.me/joinchat/HqpGRxPNqkR9TbsVH20Jzg">RS Conf 2019</a>
       </p>
       <p class="text-lg padding-top-lg">Follow us on <a target="_blank"
-                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a> and <a
-        target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
+                                                        href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
+        and <a
+          target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
 
       <p class="content-xsm">Our hashtag on social media is <a
@@ -207,7 +215,7 @@
         <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
           class="fab fa-facebook-f"></i></a></li>
         <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
-                                                                                        ></i></a>
+        ></i></a>
         </li>
         <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
         <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
