add: two more speakers, 'keepsolid' partner

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
 
   <section class="announcement" data-color="#6CD9FF">
     <div class="content-md">
-      <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">
+<!--      <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">-->
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p>
@@ -292,13 +292,11 @@
 
         <li>
           <figure>
-            <img src="images/speakers/alexander-saft.jpg" alt="Alexander Saft photo">
+            <img src="images/speakers/timofey-lavrenuyk.jpg" alt="Timofey Lavrenuyk photo">
             <figcaption>
-              <span class="speaker-company">Lifestream</span>
-              <h3><a href="speakers/alexander-saft.html">Alexander Saft</a></h3>
-              <p>
-                <small> Moscow, Russia</small>
-              </p>
+              <span class="speaker-company">KeepSolid</span>
+              <h3><a href="speakers/timofey-lavrenuyk.html">Timofey Lavrenuyk</a></h3>
+              <p><small>Odessa, Ukraine</small></p>
             </figcaption>
           </figure>
         </li>
@@ -455,6 +453,11 @@
         <li>
           <a target="_blank" href="https://www.google.com/">
             <img src="images/partners/logo-google.svg" alt="google logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.keepsolid.com/">
+            <img src="images/partners/logo-keepsolid.svg" alt="keep solid logo">
           </a>
         </li>
       </ul>
