--- a/app/speakers.html
+++ b/app/speakers.html
@@ -230,12 +230,35 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/timofey-lavrenuyk.jpg" alt="Timofey Lavrenuyk photo">
+            <figcaption>
+              <span class="speaker-company">KeepSolid</span>
+              <h3><a href="speakers/timofey-lavrenuyk.html">Timofey Lavrenuyk</a></h3>
+              <p><small>Odessa, Ukraine</small></p>
+            </figcaption>
+          </figure>
+        </li>
+
         <li>
           <figure>
             <img src="images/speakers/alexander-saft.jpg" alt="Alexander Saft photo">
             <figcaption>
               <span class="speaker-company">Lifestream</span>
               <h3><a href="speakers/alexander-saft.html">Alexander Saft</a></h3>
+              <p><small> Moscow, Russia</small></p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/dima-korolev.jpg" alt="Dima Korolev photo">
+            <figcaption>
+              <span class="speaker-company">Tinkoff</span>
+              <h3><a href="speakers/dima-korolev.html">Dima Korolev</a></h3>
               <p><small> Moscow, Russia</small></p>
             </figcaption>
           </figure>
