add: two more speakers

--- a/app/index.html
+++ b/app/index.html
@@ -214,6 +214,19 @@
 
         <li>
           <figure>
+            <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
+            <figcaption>
+              <span class="speaker-company">Emerline</span>
+              <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
             <figcaption>
               <span class="speaker-company">Google</span>
@@ -240,36 +253,23 @@
 
         <li>
           <figure>
+            <img src="images/speakers/kseniya-koltun.jpg" alt="Kseniya Koltun photo">
+            <figcaption>
+              <span class="speaker-company">FaceMetrics</span>
+              <h3><a href="speakers/kseniya-koltun.html">Kseniya Koltun</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
             <figcaption>
               <span class="speaker-company">Uber</span>
               <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
-              <p>
-                <small>Amsterdam, The Netherlands</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
-            <figcaption>
-              <span class="speaker-company">Google</span>
-              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
-              <p>
-                <small>Zürich, Switzerland</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
-            <figcaption>
-              <span class="speaker-company">EPAM</span>
-              <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
               <p>
                 <small>Amsterdam, The Netherlands</small>
               </p>
@@ -292,14 +292,17 @@
 
         <li>
           <figure>
-            <img src="images/speakers/timofey-lavrenuyk.jpg" alt="Timofey Lavrenuyk photo">
+            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
             <figcaption>
-              <span class="speaker-company">KeepSolid</span>
-              <h3><a href="speakers/timofey-lavrenuyk.html">Timofey Lavrenuyk</a></h3>
-              <p><small>Odessa, Ukraine</small></p>
+              <span class="speaker-company">Google</span>
+              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
+              <p>
+                <small>Zürich, Switzerland</small>
+              </p>
             </figcaption>
           </figure>
         </li>
+
       </ul>
 
       <h3>
