--- a/app/speakers.html
+++ b/app/speakers.html
@@ -5,7 +5,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55428637-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-55428637-2');
@@ -154,13 +158,29 @@
       <h2 class="text-lg">Speakers</h2>
 
       <ul class="speaker-list">
+
         <li>
           <figure>
             <img src="images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
             <figcaption>
               <span class="speaker-company">Self-employed</span>
               <h3><a href="speakers/andrei-lesnitsky.html">Andrei Lesnitsky</a></h3>
-              <p><small>Minsk, Belarus</small></p>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/irina-levina.jpg" alt="Irina Levina photo">
+            <figcaption>
+              <span class="speaker-company">Emerline</span>
+              <h3><a href="speakers/irina-levina.html">Irina Levina</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -171,7 +191,9 @@
             <figcaption>
               <span class="speaker-company">Google</span>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
-              <p><small>Los Angeles, US </small></p>
+              <p>
+                <small>Los Angeles, US</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -182,7 +204,22 @@
             <figcaption>
               <span class="speaker-company">wix.com</span>
               <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
-              <p><small> Berlin, Germany</small></p>
+              <p>
+                <small> Berlin, Germany</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/kseniya-koltun.jpg" alt="Kseniya Koltun photo">
+            <figcaption>
+              <span class="speaker-company">FaceMetrics</span>
+              <h3><a href="speakers/kseniya-koltun.html">Kseniya Koltun</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -191,31 +228,11 @@
           <figure>
             <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
             <figcaption>
-              <span class="speaker-company">EPAM</span>
+              <span class="speaker-company">Uber</span>
               <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
-              <p><small>Amsterdam, The Netherlands</small></p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
-            <figcaption>
-              <span class="speaker-company">Google</span>
-              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
-              <p><small>Zürich, Switzerland</small></p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
-            <figcaption>
-              <span class="speaker-company">EPAM</span>
-              <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
-              <p><small>Amsterdam, The Netherlands</small></p>
+              <p>
+                <small>Amsterdam, The Netherlands</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -226,7 +243,35 @@
             <figcaption>
               <span class="speaker-company">Bluetooth SIG</span>
               <h3><a href="speakers/martin-woolley.html">Martin Woolley</a></h3>
-              <p><small> London, United Kingdom</small></p>
+              <p>
+                <small> London, United Kingdom</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
+            <figcaption>
+              <span class="speaker-company">Google</span>
+              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
+              <p>
+                <small>Zürich, Switzerland</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/ilya-pukhalski.html">Ilya Pukhalski</a></h3>
+              <p>
+                <small>Amsterdam, The Netherlands</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -237,7 +282,9 @@
             <figcaption>
               <span class="speaker-company">KeepSolid</span>
               <h3><a href="speakers/timofey-lavrenuyk.html">Timofey Lavrenuyk</a></h3>
-              <p><small>Odessa, Ukraine</small></p>
+              <p>
+                <small>Odessa, Ukraine</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -248,7 +295,9 @@
             <figcaption>
               <span class="speaker-company">Lifestream</span>
               <h3><a href="speakers/alexander-saft.html">Alexander Saft</a></h3>
-              <p><small> Moscow, Russia</small></p>
+              <p>
+                <small> Moscow, Russia</small>
+              </p>
             </figcaption>
           </figure>
         </li>
@@ -259,7 +308,9 @@
             <figcaption>
               <span class="speaker-company">Tinkoff</span>
               <h3><a href="speakers/dima-korolev.html">Dima Korolev</a></h3>
-              <p><small> Moscow, Russia</small></p>
+              <p>
+                <small> Moscow, Russia</small>
+              </p>
             </figcaption>
           </figure>
         </li>
