add: shushunov speaker

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -314,6 +314,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-shushunov.jpg" alt="Alexander Shushunov photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/alexander-shushunov.html">Alexander Shushunov</a></h3>
+              <p>
+                <small> Tver, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
