add speakers: shawn wang, nikita sidorov

--- a/app/index.html
+++ b/app/index.html
@@ -232,7 +232,7 @@
               <span class="speaker-company">Google</span>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
               <p>
-                <small>Los Angeles, US</small>
+                <small>Los Angeles, United States</small>
               </p>
             </figcaption>
           </figure>
