--- a/app/speakers.html
+++ b/app/speakers.html
@@ -192,7 +192,7 @@
               <span class="speaker-company">Google</span>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
               <p>
-                <small>Los Angeles, US</small>
+                <small>Los Angeles, United States</small>
               </p>
             </figcaption>
           </figure>
@@ -262,7 +262,18 @@
             </figcaption>
           </figure>
         </li>
-
+        <li>
+          <figure>
+            <img src="images/speakers/shawn-wang.jpg" alt="Shawn Wang photo">
+            <figcaption>
+              <span class="speaker-company">Netlify</span>
+              <h3><a href="speakers/shawn-wang.html">Shawn Wang</a></h3>
+              <p>
+                <small>New York, United States</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
         <li>
           <figure>
             <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
@@ -327,6 +338,20 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/nikita-sidorov.jpg" alt="Nikita Sidorov photo">
+            <figcaption>
+              <span class="speaker-company">Yandex</span>
+              <h3><a href="speakers/nikita-sidorov.html">Nikita Sidorov</a></h3>
+              <p>
+                <small> Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
