add partners: netlify, yandex

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
 
   <section class="announcement" data-color="#6CD9FF">
     <div class="content-md">
-<!--      <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">-->
+      <!--      <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">-->
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p>
@@ -461,6 +461,16 @@
         <li>
           <a target="_blank" href="https://www.keepsolid.com/">
             <img src="images/partners/logo-keepsolid.svg" alt="keep solid logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.yandex.com/">
+            <img src="images/partners/logo-yandex.svg" alt="yandex logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.netlify.com">
+            <img src="images/partners/logo-netlify.svg" alt="netlify logo">
           </a>
         </li>
       </ul>
