--- a/app/partners.html
+++ b/app/partners.html
@@ -181,8 +181,22 @@
             <img src="images/partners/logo-google.svg" alt="google logo"/>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.keepsolid.com/">
+            <img src="images/partners/logo-keepsolid.svg" alt="keep solid logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.yandex.com/">
+            <img src="images/partners/logo-yandex.svg" alt="yandex logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.netlify.com">
+            <img src="images/partners/logo-netlify.svg" alt="netlify logo">
+          </a>
+        </li>
       </ul>
-
       <h2>Info Partners</h2>
       <ul class="partner-list">
         <li>
