add speaker: Madlaina Kalunder

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -200,12 +200,38 @@
 
         <li>
           <figure>
+            <img src="images/speakers/madlaina-kalunder.jpg" alt="Madlaina Kalunder photo">
+            <figcaption>
+              <span class="speaker-company">FHNW.ch</span>
+              <h3><a href="speakers/madlaina-kalunder.html">Madlaina Kalunder</a></h3>
+              <p>
+                <small>Zurich, Switzerland</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
             <img src="images/speakers/alexander-gerasimov.jpg" alt="Alex Gerasimov photo">
             <figcaption>
               <span class="speaker-company">wix.com</span>
               <h3><a href="speakers/alexander-gerasimov.html">Alex Gerasimov</a></h3>
               <p>
                 <small> Berlin, Germany</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
+            <figcaption>
+              <span class="speaker-company">Google</span>
+              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
+              <p>
+                <small>Zürich, Switzerland</small>
               </p>
             </figcaption>
           </figure>
@@ -226,19 +252,6 @@
 
         <li>
           <figure>
-            <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
-            <figcaption>
-              <span class="speaker-company">Uber</span>
-              <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
-              <p>
-                <small>Amsterdam, The Netherlands</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li>
-          <figure>
             <img src="images/speakers/martin-woolley.jpg" alt="Martin Woolley photo">
             <figcaption>
               <span class="speaker-company">Bluetooth SIG</span>
@@ -252,16 +265,17 @@
 
         <li>
           <figure>
-            <img src="images/speakers/martin-splitt.jpg" alt="Martin Splitt photo">
+            <img src="images/speakers/kirill-knysh.jpg" alt="Kirill Knysh photo">
             <figcaption>
-              <span class="speaker-company">Google</span>
-              <h3><a href="speakers/martin-splitt.html">Martin Splitt</a></h3>
+              <span class="speaker-company">Uber</span>
+              <h3><a href="speakers/kirill-knysh.html">Kirill Knysh</a></h3>
               <p>
-                <small>Zürich, Switzerland</small>
+                <small>Amsterdam, The Netherlands</small>
               </p>
             </figcaption>
           </figure>
         </li>
+
         <li>
           <figure>
             <img src="images/speakers/shawn-wang.jpg" alt="Shawn Wang photo">
@@ -274,6 +288,7 @@
             </figcaption>
           </figure>
         </li>
+
         <li>
           <figure>
             <img src="images/speakers/ilya-pukhalski.jpg" alt="Ilya Pukhalski photo">
